--- a/test.html
+++ b/test.html
@@ -11,9 +11,11 @@
 		<div class = "slide-2"></div>
 		<div class = "slide-3"></div>
 		<div class = "welcome">
-			<h1>
-				Hello World
-			</h1>
+			<div>
+				<h1>
+				Mabuhay Philippines!
+				</h1>
+			</div>
 		</div>
 		
 	</div>
